# Chalkbot

./: .gitignore  .gitmodules  3pens.config  CMakeLists.txt  Chalkbot.code-workspace  Face.gcode  FaceTest.gcode  README.md  adamstest.txt  circles3pen.gcode  gcodeConfig.txt  gengcode.bash  heart.gcode  star1pen.gcode  star3pen.gcode
butched_grbl/: grbl.h  main.c
config/: 3pens.config  gcodeConfig.txt
include/: draw.h  markerTracking.h
src/: draw.cpp  markerTracking.cpp
test/: drawTest.cpp
tests/: cameraTest.cpp  drawMarker.cpp  findFiducial.cpp  libraryTest.cpp  pipelineTest.cpp
